updated the all files in assessmnet and attadce and live sessions servcies